cluster/gitops/storage/zfs/pool-provisioner/daemonset.yaml
---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: &app_name zfs-pool-provisioner
  labels: &labels
    app.kubernetes.io/name: *app_name
spec:
  selector:
    matchLabels: *labels
  template:
    metadata:
      labels: *labels
    spec:
      hostPID: true
      nodeSelector:
        zfs.home.arpa/node.local-storage-enabled: "true"
      # Only run on nodes that have not already had the current version of the
      # script ran. When the script runs, it will update the label to prevent
      # running again.
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: zfs.home.arpa/node.local-storage-enabled
                    operator: In
                    values:
                      - "true"
                  - key: zfs.home.arpa/node.local-storage-config-map
                    operator: NotIn
                    values:
                      - zfs-pool-provisioner-scripts # This will be replaced by kustomize
      containers:
        - name: *app_name
          image: alpine/k8s:1.37.1
          command:
            - /scripts/provision-zfs-pool.sh
          securityContext:
            # Needed for zpool creation
            privileged: true
          volumeMounts:
            - name: rootfs
              mountPath: *rootfs_path
            - name: scripts
              readOnly: true
              mountPath: /scripts
      volumes:
        - name: rootfs
          hostPath:
            path: /
        - name: scripts
          configMap:
            name: zfs-pool-provisioner-scripts
            defaultMode: 0500
      serviceAccountName: *app_name
