cluster/gitops/storage/zfs/pool-provisioner/netpol.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: zfs-pool-provisioner
specs:
  - description: zfs-pool-provisioner
    endpointSelector:
      matchLabels:
        app.kubernetes.io/name: zfs-pool-provisioner
    egress:
      # k8s API to label node, preventing the pod from running forever
      - toEntities:
          - kube-apiserver
        toPorts:
          - ports:
              - port: "6443"
                protocol: TCP
